--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^1.35.6",
+    "@tanstack/react-query": "^4.0.10",
+    "@tanstack/react-query-devtools": "^4.0.10",
+    "graphql-request": "^4.3.0",
+    "graphql-tag": "^2.12.6",
     "next": "12.2.4",
+    "next-mdx-remote": "^4.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
