--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@tanstack/react-query-devtools": "^4.0.10",
     "graphql-request": "^4.3.0",
     "graphql-tag": "^2.12.6",
+    "jsonwebtoken": "^8.5.1",
     "next": "12.2.4",
     "next-mdx-remote": "^4.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "18.6.5",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
