--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^1.35.6",
+    "@tailwindcss/line-clamp": "^0.4.2",
     "@tanstack/react-query": "^4.0.10",
     "@tanstack/react-query-devtools": "^4.0.10",
+    "classnames": "^2.3.1",
     "graphql-request": "^4.3.0",
     "graphql-tag": "^2.12.6",
     "jsonwebtoken": "^8.5.1",
     "next": "12.2.4",
     "next-mdx-remote": "^4.1.0",
+    "next-themes": "^0.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
