--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "next-mdx-remote": "^4.1.0",
     "next-themes": "^0.2.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "rehype-code-titles": "^1.1.0",
+    "rehype-prism-plus": "^1.5.0"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^8.5.8",
